home shopping updates

--- a/homeshopping.html
+++ b/homeshopping.html
@@ -168,9 +168,71 @@
 						<li>Easily creating and checking off tasks</li>
 					</ul>
 				<div class="space"></div>
-				<p>Most of this work was net-new functionality, but my PM and I also took the time to make strategic usability improvements to existing Deal Hub features. See an overview below:</p>
+				<p>Most of this work was net-new functionality, but my PM and I also took the time to make strategic usability improvements to existing Deal Hub features.</p>
 
 				<div class="space"></div>
+
+				<h3>Design process - Activity Feed</h3>
+				<p>For each of the above feature areas, I went through a mini design cycle. See below one example of what that looked like for creating a new Activity Feed that HAs will use to keep tabs on customer communications.</p>
+
+				<div class="space"></div>
+
+				<h4>Step 1 - content mapping</h4>
+				<ul>
+					<li>Identified potential activity types</li>
+					<li>Worked with PM to determine which activity types we would include in the MVP</li>
+					<li>Discussed with eng to ensure we had access to all the data we wanted to display</li>
+				</ul>
+
+<!-- 				<div class="full-width-mid-page">
+					<div class="panel dark" style="text-align: center; background-color: white">
+						<img class="pic-left" src="pics/homeshopping/content.png">
+					</div>
+				</div> -->
+
+				<div class="space"></div>
+
+				<h4>Step 2 - inspiration gathering</h4>
+				<p>Scoured the internet for similar UI patterns to get the creative juices flowing</p>
+
+				<div class="full-width-mid-page">
+					<div class="panel dark" style="text-align: center; background-color: white">
+						<img class="pic-left" src="pics/homeshopping/inspo.png">
+					</div>
+				</div>
+
+				<h4>Step 3 - UI exploration</h4>
+				<ul>
+					<li>Started low-fi and worked up to high-fi</li>
+					<li>Experimented with different layouts, link styles icons, imagery, etc.</li>
+				</ul>
+
+				<div class="full-width-mid-page">
+					<div class="panel dark" style="text-align: center; background-color: white">
+						<img class="pic-left" src="pics/homeshopping/UI-ex.png">
+					</div>
+				</div>
+
+				<h4>Step 4 - Align with eng on final design</h4>
+				<ul>
+					<li>Reviewed the final design with the team and answered questions</li>
+					<li>Discussed potential MVP+ fast follow features</li>
+				</ul>
+
+				<div class="full-width-mid-page">
+					<div class="panel dark" style="text-align: center; background-color: white">
+						<img class="pic-left" src="pics/homeshopping/final.png">
+					</div>
+				</div>
+
+				<div class="space"></div>
+				<div class="space"></div>
+
+				<h3>Final designs</h3>
+				<p>We repeated a similar process for all the other fetures scoped in to this project. See an overview of the final designs below:</p>
+
+				<div class="space"></div>
+
 				<div class="space"></div>
 
 				<div class="full-width-mid-page">
