updated HS process

--- a/homeshopping.html
+++ b/homeshopping.html
@@ -36,7 +36,7 @@
 	<div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
 
-	<div id="modal_background">
+<!-- 	<div id="modal_background">
 		<div id="prompt" class="pw_prompt">
 		<label>Enter a password to view project:</label>
 			<div>
@@ -45,7 +45,7 @@
 			</div>
 
 		</div>
-	</div>
+	</div> -->
 
 
 	<div class="full-width" style="background-color: #6554CC; color: white">
@@ -173,55 +173,51 @@
 				<div class="space"></div>
 
 				<h3>Design process - Activity Feed</h3>
-				<p>For each of the above feature areas, I went through a mini design cycle. See below one example of what that looked like for creating a new Activity Feed that HAs will use to keep tabs on customer communications.</p>
+				<p>For each of the above feature areas, I went through a mini design cycle. See below one example of what that looked like for creating a new Activity Feed.</p>
 
 				<div class="space"></div>
 
-				<h4>Step 1 - content mapping</h4>
+				<h4>Step 1 - user research</h4>
 				<ul>
-					<li>Identified potential activity types</li>
-					<li>Worked with PM to determine which activity types we would include in the MVP</li>
-					<li>Discussed with eng to ensure we had access to all the data we wanted to display</li>
+					<li>Evaluated current activity content (in Salesforce and other internal platform).</li>
+					<li>Determined what type of content and level of detail to include.</li>
+					<li>Understand primary use cases + user groups outside HAs.</li>
 				</ul>
 
-<!-- 				<div class="full-width-mid-page">
-					<div class="panel dark" style="text-align: center; background-color: white">
-						<img class="pic-left" src="pics/homeshopping/content.png">
-					</div>
-				</div> -->
+				<div class="space"></div>
+
+				<h4>Step 2 - content mapping & prioritization</h4>
+				<ul>
+					<li>Reflected on what we'd learned was most important from research.</li>
+					<li>Identified potential activity types.</li>
+					<li>Worked with PM to determine which activity types we would include in the MVP.</li>
+					<li>Discussed with eng to ensure we had access to all the data we wanted to display.</li>
+				</ul>
 
 				<div class="space"></div>
 
-				<h4>Step 2 - inspiration gathering</h4>
-				<p>Scoured the internet for similar UI patterns to get the creative juices flowing</p>
+				<h4>Step 3 - inspiration gathering</h4>
+				<p>Scoured the internet for similar UI patterns to get the creative juices flowing.</p>
 
-				<div class="full-width-mid-page">
-					<div class="panel dark" style="text-align: center; background-color: white">
-						<img class="pic-left" src="pics/homeshopping/inspo.png">
-					</div>
-				</div>
+				<div class="space"></div>
 
-				<h4>Step 3 - UI exploration</h4>
+				<h4>Step 4 - UI exploration</h4>
 				<ul>
-					<li>Started low-fi and worked up to high-fi</li>
+					<li>Started low-fi and worked up to high-fi.</li>
 					<li>Experimented with different layouts, link styles icons, imagery, etc.</li>
 				</ul>
 
-				<div class="full-width-mid-page">
-					<div class="panel dark" style="text-align: center; background-color: white">
-						<img class="pic-left" src="pics/homeshopping/UI-ex.png">
-					</div>
-				</div>
+				<div class="space"></div>
 
-				<h4>Step 4 - Align with eng on final design</h4>
+				<h4>Step 5 - Align with eng on final design</h4>
 				<ul>
-					<li>Reviewed the final design with the team and answered questions</li>
-					<li>Discussed potential MVP+ fast follow features</li>
+					<li>Reviewed the final design with the team and answered questions.</li>
+					<li>Discussed potential MVP+ fast follow features.</li>
 				</ul>
 
 				<div class="full-width-mid-page">
 					<div class="panel dark" style="text-align: center; background-color: white">
-						<img class="pic-left" src="pics/homeshopping/final.png">
+						<img class="pic-left" src="pics/homeshopping/process.png">
 					</div>
 				</div>
 
