updated HS process

--- a/homeshopping.html
+++ b/homeshopping.html
@@ -179,9 +179,9 @@
 
 				<h4>Step 1 - user research</h4>
 				<ul>
-					<li>Evaluated current activity content (in Salesforce and other internal platform).</li>
+					<li>Evaluated how well current activity content is serving users.</li>
 					<li>Determined what type of content and level of detail to include.</li>
-					<li>Understand primary use cases + user groups outside HAs.</li>
+					<li>Established primary use cases + user groups outside HAs.</li>
 				</ul>
 
 				<div class="space"></div>
