updated HS process

--- a/homeshopping.html
+++ b/homeshopping.html
@@ -212,6 +212,7 @@
 				<h4>Step 5 - Align with eng on final design</h4>
 				<ul>
 					<li>Reviewed the final design with the team and answered questions.</li>
+					<li>Documented new design system components.</li>
 					<li>Discussed potential MVP+ fast follow features.</li>
 				</ul>
 
