--- a/homeshopping.html
+++ b/homeshopping.html
@@ -146,7 +146,7 @@
 				<p>First, my PM and I spoke with a number of existing Deal Hub users to understand existing functionality and usability gaps. Following that, we ran a 2-month beta program with a small group of HAs to ensure a smooth transition. Some activities included:</p>
 					<ul>
 						<li>Card-sorting: understand what information HAs need and want during the home shopping phase.</li>
-						<li>Concept-teting: reviewed a mid-fi design and gathered feedback.</li>
+						<li>Concept-testing: reviewed mid-fi designs and gathered feedback.</li>
 						<li>Adoption: participants fully adopted Deal Hub and provided feedback on a weekly basis.</li>
 					</ul>
 				</p>
