--- a/homeshopping.html
+++ b/homeshopping.html
@@ -204,7 +204,7 @@
 				<h4>Step 4 - UI exploration</h4>
 				<ul>
 					<li>Started low-fi and worked up to high-fi.</li>
-					<li>Experimented with different layouts, link styles icons, imagery, etc.</li>
+					<li>Experimented with different layouts, link styles, icons, imagery, etc.</li>
 				</ul>
 
 				<div class="space"></div>
