--- a/concierge.html
+++ b/concierge.html
@@ -162,6 +162,17 @@
 
 				<div class="space"></div>
 
+				<h3>Design process</h3>
+				<ul>
+					<li>Current state audit: Reviewed existing tooling and identified product gaps & irrelevant info.</li>
+					<li>Field research: A PM and I traveled to Austin to shadow a Renovation Lead and see what a day in his life looked like.</li>
+					<li>Low fi design & user flow testing: Created mockups and tested with RLs to get feedback.</li>
+					<li>High-fi design: created new design system components and created a polished finished product.</li>
+					<li>Eng review & visual QA: worked with tech lead to identify new components, answer questions, and review flow once built out.</li>
+				</ul>
+
+				<div class="space"></div>
+
 				<h3>Project scope</h3>
 				<p>We added net-new functionality to:</p>
 					<ul>
