--- a/homeshopping.html
+++ b/homeshopping.html
@@ -179,9 +179,10 @@
 
 				<h4>Step 1 - user research</h4>
 				<ul>
-					<li>Evaluated how well current activity content is serving users.</li>
-					<li>Determined what type of content and level of detail to include.</li>
-					<li>Established primary use cases + user groups outside HAs.</li>
+					<li>Had 1-1 conversations with ~6 users. Our goals were to:</li>
+					<li>Evaluate how well current activity content is serving users.</li>
+					<li>Determine what type of content and level of detail to include.</li>
+					<li>Establish primary use cases + user groups outside HAs.</li>
 				</ul>
 
 				<div class="space"></div>
@@ -189,7 +190,7 @@
 				<h4>Step 2 - content mapping & prioritization</h4>
 				<ul>
 					<li>Reflected on what we'd learned was most important from research.</li>
-					<li>Identified potential activity types.</li>
+					<li>Identified potential activity types (e.g. texts, calls, system activity etc.)</li>
 					<li>Worked with PM to determine which activity types we would include in the MVP.</li>
 					<li>Discussed with eng to ensure we had access to all the data we wanted to display.</li>
 				</ul>
