--- a/homeshopping.html
+++ b/homeshopping.html
@@ -227,7 +227,7 @@
 				<div class="space"></div>
 
 				<h3>Final designs</h3>
-				<p>We repeated a similar process for all the other fetures scoped in to this project. See an overview of the final designs below:</p>
+				<p>We repeated a similar process for all the other features scoped in to this project. See an overview of the final designs below:</p>
 
 				<div class="space"></div>
 
