changed styling, added booking

--- a/concierge.html
+++ b/concierge.html
@@ -77,18 +77,24 @@
 
 				<div class="context-specifics">
 					<div class="context-description">
-						<h4>Start date</h4>
-						<p>Oct 2022</p>
+						<h4>Role</h4>
+						<p>Design Lead</p>
+					</div>
+
+
+					<div class="context-description">
+						<h4>Duration</h4>
+						<p>4 months</p>
 					</div>
 
 					<div class="context-description">
-						<h4>Release date</h4>
-						<p>Jan 2023</p>
+						<h4>Released</h4>
+						<p>Jan '23</p>
 					</div>
 					
 					<div class="context-description">
 						<h4>Team</h4>
-						<p>Me, PM, Tech lead + 2 engineers</p>
+						<p>Me, PM, 3 engineers</p>
 					</div> 
 				</div>
 
