--- a/homeshopping.html
+++ b/homeshopping.html
@@ -36,18 +36,6 @@
 	<div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
 
-	<div id="modal_background">
-		<div id="prompt" class="pw_prompt">
-		<label>Enter a password to view project:</label>
-			<div>
-				<input style="display: inline; margin-bottom: 0px; vertical-align:middle;" id="pw_prompt_input1" type="password"></input>
-				<button style="display: inline; vertical-align:middle;" class="secondary-btn" onclick="checkPassword()">Submit</button>				
-			</div>
-
-		</div>
-	</div>
-
-
 	<div class="full-width" style="background-color: #6554CC; color: white">
 		<div class="title-wrapper animate-reveal animate-first">
 			<div class="title">
@@ -77,18 +65,23 @@
 
 				<div class="context-specifics">
 					<div class="context-description">
-						<h4>Start date</h4>
-						<p>Feb 2023</p>
+						<h4>Role</h4>
+						<p>Design Lead</p>
 					</div>
 
 					<div class="context-description">
-						<h4>Release date</h4>
-						<p>July 2023</p>
+						<h4>Duration</h4>
+						<p>6 months</p>
+					</div>
+
+					<div class="context-description">
+						<h4>Released</h4>
+						<p>July '23</p>
 					</div>
 					
 					<div class="context-description">
 						<h4>Team</h4>
-						<p>Me, PM, Tech lead + 3 engineers</p>
+						<p>Me, PM, 4 engineers</p>
 					</div> 
 				</div>
 
@@ -151,11 +144,15 @@
 					</ul>
 				</p>
 
+				<div class="space"></div>
+
 				<div class="full-width-mid-page">
 					<div class="panel dark" style="text-align: center; background-color: white">
 						<img class="pic-left" src="pics/homeshopping/card-sorting.png">
 					</div>
 				</div>
+
+				<div class="space"></div>
 
 				<h3>Project scope + requirements</h3>
 				<p>HAs were moving from Salesforce to Deal Hub, where we would need to support:</p>
@@ -216,6 +213,8 @@
 					<li>Documented new design system components.</li>
 					<li>Discussed potential MVP+ fast follow features.</li>
 				</ul>
+
+				<div class="space"></div>
 
 				<div class="full-width-mid-page">
 					<div class="panel dark" style="text-align: center; background-color: white">
