--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
           <div class="home-title">
             <div>
               <h4 style="margin-bottom: 20px; text-align: center;">The Design Portfolio of</h4>
-              <h1 style="text-align: center; margin-bottom: 20px; color: var(--purple)">Emily Porat</h1>
+              <h1 style="text-align: center; margin-bottom: 20px; color: black">Emily Porat</h1>
               <p class=p-XL style="margin-bottom: 10px; text-align: center">Senior Product Designer at <a style="color: black" href="https://orchard.com/">Orchard</a> · designing enterprise tools for complex systems</p>
               
             </div>
@@ -61,28 +61,17 @@ $('#footer').load('http://emilyporat.com/footer.html');
 
 <div id="projects">
 
-  <div class="section-large" style="background-color: var(--white)">  
+  <div class="section-large" style="background-color: white">  
     <div class="project-info-large">
       <h4 style="margin-bottom: 15px;">Orchard • 2023 • Research & Design</h4>
-      <h3>Home Shopping</h3>
-      <p>Consolidated existing tooling into a net-new dashboard to better support Orchard’s internal agents in managing their pipeline of clients who are buying a home.</p>
-      <p><a href="homeshopping.html">Learn more →</a></p>
+      <h3>Customer booking workflow</h3>
+      <p>Sped up the customer booking experience 10x by simplifying the workflow, automating key steps, and removing dependencies from other teams.</p>
+      <p><a href="booking.html">Learn more →</a></p>
     </div>
-    <img class="project-pic-large" src="pics/homeshopping/hs.png">
+    <img class="project-pic-large" src="pics/booking/main-1.png">
   </div>
 
-
-  <div class="section-large" style="background-color: var(--white)">  
-    <div class="project-info-large">
-      <h4 style="margin-bottom: 15px;">Orchard • 2022 • Research & Design</h4>
-      <h3>Concierge</h3>
-      <p>Designed product support for Orchard's "Concierge" renovation program — including project planning, generating smart contracts, and sending invoices.</p>
-      <p><a href="concierge.html">Learn more →</a></p>
-    </div>
-    <img class="project-pic-large" src="pics/concierge.png">
-  </div>
-
-  <div class="section-large" style="background-color: var(--white)">  
+  <div class="section-large" style="background-color: white">  
     <div class="project-info-large">
       <h4 style="margin-bottom: 15px;">Orchard • 2022 • Vision & Strategy</h4>
       <h3>Orchard platform product vision</h3>
@@ -92,8 +81,29 @@ $('#footer').load('http://emilyporat.com/footer.html');
     <img class="project-pic-large" src="pics/roadmap.png">
   </div>
 
+  <div class="section-large" style="background-color: white">  
+    <div class="project-info-large">
+      <h4 style="margin-bottom: 15px;">Orchard • 2023 • Research & Design</h4>
+      <h3>Home Shopping</h3>
+      <p>Consolidated existing tooling into a net-new dashboard to better support Orchard’s internal agents in managing their pipeline of home-buyers.</p>
+      <p><a href="homeshopping.html">Learn more →</a></p>
+    </div>
+    <img class="project-pic-large" src="pics/homeshopping/hs.png">
+  </div>
 
-  <div class="section-large" style="background-color: var(--white)">  
+
+  <div class="section-large" style="background-color: white">  
+    <div class="project-info-large">
+      <h4 style="margin-bottom: 15px;">Orchard • 2022 • Research & Design</h4>
+      <h3>Concierge</h3>
+      <p>Designed product support for Orchard's "Concierge" renovation program — including project planning, generating smart contracts, and sending invoices.</p>
+      <p><a href="concierge.html">Learn more →</a></p>
+    </div>
+    <img class="project-pic-large" src="pics/concierge.png">
+  </div>
+
+
+  <div class="section-large" style="background-color: white">  
     <div class="project-info-large">
       <h4 style="margin-bottom: 15px;">Deloitte Digital • 2021 • Research & Strategy</h4>
       <h3>Nonprofit user research & roadmapping</h3>
@@ -104,7 +114,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
   </div>
 
 
-    <div class="section-large" style="background-color: var(--white)">
+    <div class="section-large" style="background-color: white">
       <div class="project-info-large">
         <h4 style="margin-bottom: 10px;">Deloitte Digital • 2020 • Research & Design</h4>
         <h3>Inventory management system</h3>
@@ -114,7 +124,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
       <img class="project-pic-large" src="pics/pos-small.png" alt="A screenshot of a point of sale system on a Salesforce desktop interface and an iPad interface">
     </div>
 
-  <div class="section-large" style="background-color: var(--white);">
+  <div class="section-large" style="background-color: white;">
     <div class="project-info-large">
       <h4 style="margin-bottom: 10px;">Deloitte Digital • 2020 • Research & Design</h4>
       <h3>FHA website redesign</h3>
