--- a/orchard-roadmap.html
+++ b/orchard-roadmap.html
@@ -75,13 +75,18 @@
 				<div class="context-specifics">
 
 					<div class="context-description">
-						<h4>Length</h4>
-						<p>Nov 2022-Feb 2023</p>
+						<h4>Role</h4>
+						<p>Design Lead</p>
+					</div> 
+
+					<div class="context-description">
+						<h4>Duration</h4>
+						<p>Nov 2022 - Nov 2023 (1 yr)</p>
 					</div> 
 				
 					<div class="context-description">
 						<h4>Team</h4>
-						<p>Me and a lead PM led the initiative, many others contributed</p>
+						<p>Myself, PM</p>
 					</div> 
 				</div>
 
