--- a/booking.html
+++ b/booking.html
@@ -35,6 +35,18 @@
 	<div id="nav"></div>
 	<div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
+	<div id="modal_background">
+		<div id="prompt" class="pw_prompt">
+		<label>Enter a password to view project:</label>
+			<div>
+				<input style="display: inline; margin-bottom: 0px; vertical-align:middle;" id="pw_prompt_input1" type="password"></input>
+				<button style="display: inline; vertical-align:middle;" class="secondary-btn" onclick="checkPassword()">Submit</button>				
+			</div>
+
+		</div>
+	</div>
+
+
 
 	<div class="full-width" style="background-color: #D0F2FF; color: black">
 		<div class="title-wrapper animate-reveal animate-first">
