Added back about page

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
   <head>
     <title>Emily Porat | About</title>
-    <meta name="description" content="Emily Porat's Portfolio | UX/UI | Development | Technology Consulting | Emily Porat is a UX Designer at Deloitte Digital">
+    <meta name="description" content="Emily Porat's Portfolio | UX/UI | Development | Technology Consulting | Emily Porat is a Senior Product Designer at Orchard">
     <meta name="keywords" content="Emily Porat, Carnegie Mellon University, Emily Porat CMU, Emily Porat Carnegie Mellon, Emily Porat Carnegie Mellon University, Porat, Emily CMU, Porat CMU">
     <meta name="author" content="Emily Porat">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -55,18 +55,32 @@
 
         <div class="body right">
         <div class="context-summary">
-          <h1 style="color: var(--purple); margin-bottom: 20px">About Emily</h1>
+          <h1 style="color: black; margin-bottom: 20px">About Emily</h1>
           <p class="p-XL">
-            I do a little bit of everything design-wise, but I am most drawn towards the synthesis, organizational, and problem-solving elements of UX. 
+            Hey! I'm Emily. I'm an NYC-based product designer.
           </p>
 
           <div  class="space"></div>
 
-          <p>For more info on my professional background, check out my <a href="https://www.linkedin.com/in/emilyporat/">LinkedIn</a> download my <a href="resume.pdf" target="_blank">resume</a>.</p>
+          <p>I currently work at <a href="https://orchard.com/">Orchard</a>, a real estate startup that offers streamlined services and tooling for consumers looking to buy and/or sell their home. I lead design on our Platform team, which supports all internal tooling for Orchard's agents and operations teams. In my 2+ years at Orchard, I've worked on projects big & small, from redesigning a global search feature to overhauling our entire platform design system to introducing net-new customer management dashboards.</p>
 
           <div  class="space"></div>
 
-          <p>In my free time, you can catch me reading, lifting heavy things at the gym, playing with my cats, or thrift shopping in Brooklyn.</p>
+          <p>Before Orchard, I worked in gov consulting at <a href="https://www.deloittedigital.com/us/en.html">Deloitte Digital</a>, where I led a mix of redesign and research projects for a variety of clients and industries, ranging from mobile apps to consumer websites to interntal tools. I also started a Junior Designer mentorship program from scratch, where I led programming and created resources for 40+ aspiring designers.</p>
+
+          <div  class="space"></div>
+
+          <p>I built my foundation in design at Carnegie Mellon, where I studied Information Systems and Human-Computer Interaction. I was also a teaching assistant for an Intro to CS course and worked on a HCI research project called <a href="https://www.zensors.com/">Zensors</a>.</p>
+
+          <div  class="space"></div>
+
+          <p>In my free time, you can catch hanging with my cats (Bean & Basil), cooking elaborate dinners for friends, and reading.</p>
+
+        <div class="full-width-mid-page">
+          <div class="panel dark" style="text-align: center; background-color: var(--white); width: 80%; padding-left: 10%; padding-right: 10%">
+            <img class="pic-left" src="pics/about/about.png">
+          </div>
+        </div>
 
         </div>
 
