--- a/footer.html
+++ b/footer.html
@@ -2,8 +2,8 @@
   
   <div id="container">
     <div class="contact-text" style="margin: 0">
-      <h4 style="color: white;">Product Designer</h4>
-      <h1 style="color: var(--purple); font-size: 3rem">Emily Porat</h1> 
+      <h4 style="color: white;">Senior Product Designer</h4>
+      <h1 style="color: white; font-size: 3rem">Emily Porat</h1> 
     </div>
 
     <div id="footer-links">
