--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
             <div>
               <h4 style="margin-bottom: 20px; text-align: center;">The Design Portfolio of</h4>
               <h1 style="text-align: center; margin-bottom: 20px; color: black">Emily Porat</h1>
-              <p class=p-XL style="margin-bottom: 10px; text-align: center">Senior Product Designer at <a style="color: black" href="https://orchard.com/">Orchard</a> · designing enterprise tools for complex systems</p>
+              <p class=p-XL style="margin-bottom: 10px; text-align: center">Senior Product Designer at <a style="color: black" href="https://orchard.com/">Orchard</a> in NYC · designing enterprise tools for complex systems</p>
               
             </div>
           </div>
@@ -103,7 +103,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
   </div>
 
 
-  <div class="section-large" style="background-color: white">  
+<!--   <div class="section-large" style="background-color: white">  
     <div class="project-info-large">
       <h4 style="margin-bottom: 15px;">Deloitte Digital • 2021 • Research & Strategy</h4>
       <h3>Nonprofit user research & roadmapping</h3>
@@ -111,7 +111,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
       <p><a href="health-nonprofit.html">Learn more →</a></p>
     </div>
     <img class="project-pic-large" src="pics/EF.png" alt="A screenshot of the HUD style guide">
-  </div>
+  </div> -->
 
 
     <div class="section-large" style="background-color: white">
@@ -124,7 +124,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
       <img class="project-pic-large" src="pics/pos-small.png" alt="A screenshot of a point of sale system on a Salesforce desktop interface and an iPad interface">
     </div>
 
-  <div class="section-large" style="background-color: white;">
+<!--   <div class="section-large" style="background-color: white;">
     <div class="project-info-large">
       <h4 style="margin-bottom: 10px;">Deloitte Digital • 2020 • Research & Design</h4>
       <h3>FHA website redesign</h3>
@@ -132,7 +132,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
       <p><a href="fha.html">Learn more →</a></p>
     </div>
     <img style="background-color: var(--pink)" class="project-pic-large" src="pics/FHA_featured.png" alt="A screenshot of the FHA.gov home page">
-  </div>
+  </div> -->
 
 </div>  
 
