--- a/orchard-roadmap.html
+++ b/orchard-roadmap.html
@@ -101,15 +101,26 @@
 				
 				<div class="space"></div>
 
-				<h3>The problem</h3>
+				<h3>Problem</h3>
 				<p>
-					While Deal Hub provided <i>much</i> better tasking functionality for queue-based employees, it created a new issue — major overlap with Atlas and Salesforce data. Users didn't know where to go for what information, or which system to trust. It was clear we needed to unify the platform into one singular source of truth (or at least what felt like one singular source of truth).
+					While Deal Hub provided <i>much</i> better flexibility/configurability and tasking functionality for queue-based employees, it created a new issue — major overlap with Atlas and Salesforce data. Users didn't know where to go for what information, or which system to trust. 
 				</p>
 
 				<div class="space"></div>
 
+				<h3>Solution</h3>
+				<p>
+					It was clear we needed to unify the platform tools into one singular experience (or at least what felt like one singular experience).
+				</p>
 
-				<h3>Approach</h3>
+
+				<div class="full-width-mid-page">
+					<div class="panel dark" style="text-align: center; background-color: var(--white)">
+						<img class="pic-left" src="pics/orchard-vision/overlap.png">
+					</div>
+				</div>
+
+				<h2>Process</h2>
 				<p>
 					<ul>
 						<li>Before this initiative kicked off, I led a cross-functional group in defining unique design principles for the platform - these were meant to aid in decision-making and summarize what sets apart Orchard's internal tools.</li>
@@ -120,6 +131,16 @@
 				</p>
 
 				<div class="space"></div>
+				<div class="space"></div>
+
+				<div class="full-width-mid-page">
+					<div class="panel dark" style="text-align: center; background-color: white">
+						<h3 style="padding-top: 50px; color: black;">Platform Design Principles</h3>
+						<div class=p-XL style="padding-top: 10px; color: black; padding-left: 20%; padding-right: 20%; width: 60%">I ran a series of workshops with the goal of defining a set of shared, specific, and opinionated design principles that we will utilize to help guide future design work.</div>
+						<img class="pic-left" src="pics/orchard-vision/design-principles.png">
+					</div>
+				</div>
+
 
 				<h3>Learnings from the Listening Tour</h3>
 				<p>
@@ -132,29 +153,34 @@
 
 				<div class="space"></div>
 
+				<h3>High-level vision</h3>
+				<p>
+					I worked with my PM to synthesize + reflect on everything we learned from the listening tour, and we aligned on this high-level vision:
+					<ul>
+						<li>Deal Hub will replace Atlas from an end-user perspective. Some workflows may continue to <em>technically</em> exist in Atlas, but users will access these workflows via the Deal Hub UI.</li>
+						<li>Salesforce will be focused on lead management, scheduling, and load-balancing. Core real estate workflows and data should be deprecated and moved to Deal Hub.</li>
+						<li>We will invest in Deal Hub admin & configuration capabalities to enable scale and flexibility as the business grows and changes.</li>
+					</ul>
+				</p>
+
+				<div class="space"></div>
+				<h3>Future tool usage by role:</h3>
+
 			<div class="full-width-mid-page">
-				<div class="panel dark" style="text-align: center; background-color: #A061D5">
-					<img class="pic-left" src="pics/orchard-vision/probs.png">
+				<div class="panel dark" style="text-align: center; background-color: var(--white)">
+					<img class="pic-left" src="pics/orchard-vision/probs.png" style="padding-top: 1%; padding-bottom: 1%">
 				</div>
 			</div>
-
-			<div class="space"></div>
 
 			<h3>Outcome</h3>
 			<p>
 				<ul>
-					<li>To address the communication challenge, we rolled out Slack as our primary deal team communication platform and deprecated other internal comms tools. This has led to much more effective cross-team communication.</li>
-					<li>Over the course of 2023, we have deprecated irrelevant legacy content and functionality in Atlas and Salesforce and gradually moved it into Deal Hub. We gave most internal roles access to Deal Hub and transitioned them to it as their primary tool.</li>
+					<li>Over the course of 2023, we deprecated irrelevant legacy content and functionality in Atlas and Salesforce and gradually moved it into Deal Hub. We gave most internal roles access to Deal Hub and transitioned them to it as their primary tool.</li>
+					<li>In Q3, to address the challenges around communication, we moved to Slack as our primary deal team communication platform and deprecated embedded comms tools in DH, Atlas, and Salesforce. This has led to <em>much</em> more effective cross-team communication.</li>
+					<li>In Q4, we overhauled the <a href="booking.html">customer booking workflow,</a> moving booking contract generation out of Atlas and into Deal Hub and moving a large part of our sales team into Deal Hub. This project also established a new pattern for contract generation in general.</li>
 					<li>In 2024, we plan to take on a larger IA overhaul project to further centralize Deal Hub as the primary tool + source of truth for all roles.</li>
 				</ul>
 			</p>
-
-			<div class="space"></div>
-
-            <div class="so-what" style="background-color: rgba(160, 97, 213, .2); border-left: 10px solid var(--purple); ">
-        		<h4>Want the full case study?</h4>
-        		<p>Please <a href="mailto:emporat@gmail.com" target="_top">reach out directly</a> and I can share more details.</p>
-        	</div> 
 
 			</div>
 
