--- a/booking.html
+++ b/booking.html
@@ -111,7 +111,7 @@
 				<div class="space"></div>
 
 				<h3>Problem</h3>
-				<p>In order to generate the contracts needed to book a customer, our internal “Service Advisors” (SAs) had to go through a clunky 15-30 min process that was dependent on a separate team. This was a time-waster for both the SA and the customer, and likely impacted our booking rates negatively.
+				<p>In order to generate the contracts needed to book a customer during a consultation call, our internal “Service Advisors” (SAs) had to go through a clunky 15-30 min process that was dependent on a separate team. This was a time-waster for both the SA and the customer, and likely impacted our booking rates negatively.
 				</p>
 
 				<div class="space"></div>
@@ -123,7 +123,7 @@
 				<div class="space"></div>
 
 				<h3>Outcome</h3>
-				<p>The new workflow is set to be released on Nov 1, so TBD.
+				<p>The new workflow is set to be released on Nov 1. We expect the new flow to improve booking rates, increase visibility, and shorten consultation times.
 				</p>
 
 		</div>
@@ -139,10 +139,10 @@
 		<h2>Pain points uncovered from user research</h2>
 		<p>The old booking workflow was:</p>
 		<ul>
-			<li>A 20+ step process to generate 2 contracts</li>
-			<li>Involves many legacy steps that are now meaningless</li>
-			<li>Typically occurs during a live call with a customer — SA is trying generate these contracts and make small talk at the same time</li>
-			<li>Requires reaching out to our Transaction Operations team to complete & send out one of the contracts (which can take up to 30 mins)</li>
+			<li>A 20+ step process to generate 2 contracts.</li>
+			<li>Involves many legacy steps that are now meaningless.</li>
+			<li>Typically occurs during a live call with a customer — SA is trying generate these contracts and make small talk at the same time.</li>
+			<li>Requires reaching out to our Transaction Operations team to complete & send out one of the contracts (which can take up to 30 mins).</li>
 			<li>Once sent, there wasn’t one clear place to view the contract statuses or make updates to them.</li>
 		</ul>
 		<div class="space"></div>
@@ -168,23 +168,24 @@
 		<ul>
 			<li>Speed - All booking contracts can be sent within 2 minutes AND without depending on another team.</li>
 			<li>Booking rates - If booking docs are always sent during consultations, more customers may book then & there.</li>
-			<li>Consult volume - If we can shorten consults by 15 mins, that frees up SA time to take on more consults per day and increases scheduling availability.</li>
-			<li>Labor costs savings - Removing the contract generation task from the other team enables use to utilize that team’s time on other work instead.</li>
+			<li>Consult volume - If we can shorten consults by 15 mins, that frees up SA time to take on more consults per day and improves scheduling availability.</li>
+			<li>Labor costs savings - Removing the contract generation task from the other team enables us to utilize that team’s time on other work instead.</li>
 			<li>Tooling satisfaction - Improve SA efficiency and general happiness with tooling.</li>
 		</ul>
 
+		<div class="space"></div>
 		<div class="space"></div>
 
 		<div class="full-width-mid-page">
 			<div class="panel dark" style="text-align: center; background-color: white;">
 				<h3 style="padding-top: 100px; color: black;">Designing the new workflow</h3>
-				<div class=p-XL style="padding-top: 10px; color: black; padding-left: 20%; padding-right: 20%; width: 60%">I started by evaluating the existing form that users filled out to generate the contract today.</div>
+				<div class=p-XL style="padding-top: 10px; color: black; padding-left: 20%; padding-right: 20%; width: 60%">I started by evaluating the existing form that users filled out to generate the Guaranteed Offer Purchase Agreement today.</div>
 				<img class="pic-left" src="pics/booking/old-form.png">
 				<div class=p-XL style="padding-top: 100px; color: black; padding-left: 20%; padding-right: 20%; width: 60%">Then, I mapped out a high-level workflow for the new process.</div>
 				<img class="pic-left" src="pics/booking/workflow.png">
 				<div class=p-XL style="padding-top: 100px; color: black; padding-left: 20%; padding-right: 20%; width: 60%">Next, I created a set of mid-fi prototypes exploring different interaction patterns.</div>
 				<img class="pic-left" src="pics/booking/prototypes.png">
-				<div class=p-XL style="padding-top: 100px; color: black; padding-left: 20%; padding-right: 20%; width: 60%">Last, I aligned with my team on a final design flow (4 steps instead of 20!).</div>
+				<div class=p-XL style="padding-top: 100px; color: black; padding-left: 20%; padding-right: 20%; width: 60%">Last, I aligned with my team on a final design flow (4 steps instead of 20!)</div>
 				<img class="pic-left" src="pics/booking/final-flow.png">
 				<div class=p-XL style="padding-top: 100px; color: black; padding-left: 20%; padding-right: 20%; width: 60%">Here's a closer look at the new & improved contract generation form:</div>
 				<img class="pic-left" src="pics/booking/final.png">
