--- a/about.html
+++ b/about.html
@@ -37,30 +37,27 @@
       <div id="nav"></div>
       <div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
-<!--       <div class="full-width" style="background-color: var(--purple); height: 60vh">
-        <div class="title-wrapper animate-reveal animate-first" style="height: 60vh;">
-          <div class="title">
+      <div class="full-width" style="background-color: white; height: 30vh;">
+        <div class="title-wrapper animate-reveal animate-first" style="height: 30vh;">
+          <div class="title" style="width: 54%; padding-left: 23%; padding-right: 23%">
             <div>
-              <h1 style="color: white; margin-bottom: 20px">About</h1>
-              <p style="color: white">Organizational nerd, pragmatist, thrift shopper, cat lover 🐈‍</p>
+              <h1 style="color: black; margin-bottom: 5px">About Emily</h1>
+              <div class="p-XL" style="color: black">Hey! I'm Emily. I'm an NYC-based product designer.</div>
             </div>
           </div>
         </div>
 
-        <img src="pics/about/emily4.png" class="big-pic" style="height: 60vh; width: auto">
+<!--         <img src="pics/about/emily4.png" class="big-pic" style="height: 60vh; width: auto"> -->
 
-      </div> -->
+      </div>
 
-      <div class="panel" style="padding-top: 15%; padding-bottom: 5%">
+      <div class="panel" style="padding-top: 0; padding-bottom: 5%">
 
         <div class="body right">
-        <div class="context-summary">
-          <h1 style="color: black; margin-bottom: 20px">About Emily</h1>
+<!--           <h1 style="color: black; margin-bottom: 20px">About Emily</h1>
           <p class="p-XL">
             Hey! I'm Emily. I'm an NYC-based product designer.
-          </p>
-
-          <div  class="space"></div>
+          </p> -->
 
           <p>I currently work at <a href="https://orchard.com/">Orchard</a>, a real estate startup that offers streamlined services and tooling for consumers looking to buy and/or sell their home. I lead design on our Platform team, which supports all internal tooling for Orchard's agents and operations teams. In my 2+ years at Orchard, I've worked on projects big & small, from redesigning a global search feature to overhauling our entire platform design system to introducing net-new customer management dashboards.</p>
 
@@ -80,8 +77,6 @@
           <div class="panel dark" style="text-align: center; background-color: var(--white); width: 80%; padding-left: 10%; padding-right: 10%">
             <img class="pic-left" src="pics/about/about.png">
           </div>
-        </div>
-
         </div>
 
       </div>
