--- a/booking.html
+++ b/booking.html
@@ -105,6 +105,7 @@
 					<li>In order to be considered "booked" with Orchard, customers typically have to sign 2 contracts: a Representation & Program Agreement, and a Guaranteed Offer Purchase Agreement (GOPA).</li>
 					<li>The GOPA locks in a "Guaranteed Offer" price that Orchard will buy the customer's home for if it doesn't sell on the market.</li>
 				</ul>
+				<p>For more context on Orchard's platform tools, check out my case study on our <a href="orchard-roadmap.html">product vision</a>.
 				</p>
 				
 
