--- a/orchard-roadmap.html
+++ b/orchard-roadmap.html
@@ -80,8 +80,13 @@
 					</div> 
 
 					<div class="context-description">
-						<h4>Duration</h4>
-						<p>Nov 2022 - Nov 2023 (1 yr)</p>
+						<h4>Start</h4>
+						<p>Nov 2022</p>
+					</div> 
+
+					<div class="context-description">
+						<h4>End</h4>
+						<p>March 2023</p>
 					</div> 
 				
 					<div class="context-description">
