update to https

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ gtag('config', 'UA-119412150-1');
 
 // load other reused files
 $(function() {
-$('#nav').load('http://emilyporat.com/nav.html');
-$('#footer').load('http://emilyporat.com/footer.html');
+$('#nav').load('https://emilyporat.com/nav.html');
+$('#footer').load('https://emilyporat.com/footer.html');
 });
 </script>
 
