--- a/about.html
+++ b/about.html
@@ -26,8 +26,8 @@
       
       // load other reused files
       $(function() {
-        $('#nav').load('http://emilyporat.com/nav.html');
-        $('#footer').load('http://emilyporat.com/footer.html');
+        $('#nav').load('https://emilyporat.com/nav.html');
+        $('#footer').load('https://emilyporat.com/footer.html');
       });
     </script>
   </head>
