updated booking description

--- a/booking.html
+++ b/booking.html
@@ -190,7 +190,7 @@
 		<div class="space"></div>
 		<h2>Rollout & outcome</h2>
 		<p>To ensure a smooth rollout, my PM and I organized 2 training sessions + optional office hours for SAs, and set up a Slack channel for feedback and questions.</p>
-		<p>Release is scheduled for Nov 1 - outcomes & metrics are TBD!</p>
+		<p>Release is scheduled for Nov 1 - we expect the new flow to improve booking rates, increase visibility, and shorten consultation times.</p>
 
 	</div>
 
