--- a/orchard-roadmap.html
+++ b/orchard-roadmap.html
@@ -108,10 +108,12 @@
 					It was clear we needed to unify the platform tools into one singular experience (or at least what felt like one singular experience).
 				</p>
 
+				<div class="space"></div><div class="space"></div>
 
 				<div class="full-width-mid-page">
 					<div class="panel dark" style="text-align: center; background-color: var(--white)">
-						<img class="pic-left" src="pics/orchard-vision/overlap.png">
+						<h2 style="color: black">Overlap in tools</h2>
+						<img class="pic-left" src="pics/orchard-vision/overlap.png" style="padding-top: 1%">
 					</div>
 				</div>
 
