updated booking gif

--- a/booking.html
+++ b/booking.html
@@ -171,8 +171,9 @@
 				<img class="pic-left" src="pics/booking/old-form.png">
 				<div class=p-XL style="padding-top: 100px; color: black; padding-left: 20%; padding-right: 20%; width: 60%">Then, I mapped out a high-level workflow for the new process.</div>
 				<img class="pic-left" src="pics/booking/workflow.png">
-				<div class=p-XL style="padding-top: 100px; color: black; padding-left: 20%; padding-right: 20%; width: 60%">Next, I created a set of mid-fi prototypes exploring different interaction patterns.</div>
-				<img class="pic-left" src="pics/booking/prototypes.png">
+				<div class=p-XL style="padding-top: 100px; color: black; padding-left: 20%; padding-right: 20%; width: 60%">Next, I created a set of prototypes exploring different interaction patterns. </div>
+				<p style="padding-top: 10px; color: black; padding-left: 20%; padding-right: 20%; width: 60%">The prototype below shows a flow where the contract generation opens in a new tab. We later decided it would be more fluid to open the contract form in-place even though that form technically lived in a separate tool.</p>
+				<img class="pic-left" src="pics/booking/prototype.gif">
 				<div class=p-XL style="padding-top: 100px; color: black; padding-left: 20%; padding-right: 20%; width: 60%">Last, I aligned with my team on a final design flow (4 steps instead of 20!)</div>
 				<img class="pic-left" src="pics/booking/final-flow.png">
 				<div class=p-XL style="padding-top: 100px; color: black; padding-left: 20%; padding-right: 20%; width: 60%">Here's a closer look at the new & improved contract generation form:</div>
